--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.5.0",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
@@ -14,16 +14,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.12.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-exception-handler": "^1.2.8",
-    "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
-    "mongoclient": "^1.0.3",
     "mongodb-autoincrement": "^1.0.1",
-    "mongoose": "^5.9.4",
-    "mongoose-autopopulate": "^0.12.0",
-    "mongoose-beautiful-unique-validation": "^7.1.1",
     "mongoose-validate-all": "^0.1.0",
     "mongoose-validator": "^2.1.0",
     "nodemon": "^2.0.2",
@@ -40,8 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "concurrently --kill-others \"node server\" \"react-scripts start\" "
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
