--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-exception-handler": "^1.2.8",
+    "jwt-decode": "^2.2.0",
     "jwt-simple": "^0.5.6",
     "mongodb-autoincrement": "^1.0.1",
     "mongoose-validate-all": "^0.1.0",
